# labTFL

./: .gitignore  README.md  generator.py  member_equal.py  pyproject.toml  requirements.txt  show.py
lab2/: dfa_from_table.py  generator.py  main.py  member_equal.py  planarity.py  show.py
lab2TFL/: generator.py  main.py  pyproject.toml
lab2tfl/: dfa_from_table.py  generator.py  main.py  make_video.py  member_equal.py  planarity.py  server.py  show.py
